Updated layout based on recent serenity-qmk changes. Don't use tap dance, in favor of tap - hold press.

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -13,5 +13,11 @@
         "*.cpp": "cpp",
         "*.hpp": "cpp",
         "xstddef": "c"
-    }
+    },
+    "git.ignoredRepositories": [
+        "chibios",
+        "ugfx",
+        "googletest",
+        "chibios-contrib"
+    ]
 }
